# auto-ai

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md
crates/ai-config/: Cargo.toml
crates/ai-config/examples/: client.at  daemon.at
crates/ai-config/src/: lib.rs  loader.rs  provider.rs  tier.rs  validate.rs  wire.rs
crates/aictl/src/: main.rs
crates/auto-ai-agent/: Cargo.toml
crates/auto-ai-agent/resources/souls/: advisor.md  assistant.md  gofer.md  planner.md  super-advisor.md  super-coder.md  super-tester.md
crates/auto-ai-agent/src/: agent.rs  error.rs  lib.rs  memory.rs  profession.rs  relay.rs  role_def.rs  roles.rs  skill.rs  tool.rs  validate.rs  workflow.rs  workflow_validator.rs
crates/auto-ai-agent/src/builtin_roles/: advisor.rs  architect.rs  assistant.rs  coder.rs  documenter.rs  gofer.rs  mod.rs  planner.rs  reviewer.rs  runner.rs  super_advisor.rs  super_coder.rs  super_tester.rs  tester.rs  translator.rs
crates/auto-ai-agent/src/config/: mod.rs  profession_config.rs  role_config.rs
crates/auto-ai-agent/src/orchestration/: budget.rs  driver.rs  flow.rs  handoff.rs  mod.rs  pipeline.rs
crates/auto-ai-agent/src/professions/: architect.rs  assistant.rs  coder.rs  documenter.rs  mod.rs  reviewer.rs  runner.rs  tester.rs  translator.rs
crates/auto-ai-agent/tests/: live_run.rs
crates/auto-ai-cli/: Cargo.toml
crates/auto-ai-cli/src/: chat_model.rs  main.rs  markdown.rs  session.rs  spawn_pipeline.rs  tools.rs  tui.rs
crates/auto-ai-client/: Cargo.toml
crates/auto-ai-client/src/: daemon.rs  error.rs  lib.rs  openai_format.rs  types.rs
crates/auto-ai-client/src/provider/: anthropic.rs  openai.rs
crates/auto-ai-daemon/: Cargo.toml
crates/auto-ai-daemon/src/: config.html  config.rs  format.rs  lib.rs  main.rs  pool.rs  server.rs  services.rs  tier_router.rs  tracker.rs
crates/auto-ai-daemon/src/provider/: anthropic.rs  mod.rs  openai.rs
docs/: auto-ai-agent-design.md  orchestration-down-design.md  os-config-self-sufficient-design.md  workflow-migration.md
docs/designs/: 2026-07-17-tui-cancel-agent-run-design.md
docs/plans/: 001-auto-ai-agent-implementation.md  001-daemon-client-fix-plan.md  002-three-crate-refactor.md  003-workflow-loops-validators-gates.md  004-agent-roles-profession-upgrade.md  005-assistant-profession.md  007-auto-ai-cli.md  007-three-work-modes.md  008-orchestration-down.md  009-execution-modes.md  010-2026-07-17-tui-cancel-agent-run-plan.md  011-daemon-client-fix-plan.md  012-agent-architecture-fix-plan.md  2026-07-17-tui-cancel-agent-run-plan.md
docs/reviews/: 001-daemon-client-review.md  002-historical-plans-review.md  003-architecture-review.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: config-page.vue
plans/: 003-workflow-loops-validators-gates.md  006-streaming-tool-calls.md
