[package]
name = "auto-ai-client"
version = "0.1.0"
edition = "2021"
description = "AutoOS AI client — thin daemon HTTP client (canonical wire format)"

[dependencies]
ai-config = { path = "../ai-config" }
reqwest = { version = "0.12", features = ["json", "blocking", "stream"] }
tokio = { version = "1", features = ["time"] }
futures = "0.3"
serde_json = "1"
tracing = "0.1"

[lib]
name = "auto_ai_client"
path = "src/lib.rs"
